--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <meta charset="UTF-8">
 <title>Title of the document</title>
 </head>
-
+<style>
+body {
+  background-image: url('closed.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
+</style>
 <body>
-Content of the document here......
+<p style="text-align: center;"><strong><a href="mailto:info@sg42.se">info@sg42.se</a></strong></p>
 </body>
 
 </html>
