--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@ body {
   background-attachment: fixed; 
   background-size: 100% 100%;
 }
+  .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
 </style>
 <body>
+  <div class="footer">
 <p style="text-align: center;"><strong><a href="mailto:info@sg42.se">info@sg42.se</a></strong></p>
+</div>
+
 </body>
 
 </html>
