--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>SG42 Internet AB</title>
 </head>
+<link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
 <style>
 body {
   background-image: url('closed.jpg');
