--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@ body {
   width: 100%;
   color: white;
   text-align: center;
+        
+}
+a {
+  color: white;
 }
 </style>
 <body>
-  <div class="footer">
+<div class="footer">
 <p><strong><a href="mailto:info@sg42.se">info@sg42.se</a></strong></p>
 </div>
-
 </body>
-
 </html>
