--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <title>SG42 Internet AB</title>
 </head>
-<link rel="icon" 
-      type="image/png" 
-      href="favicon.png">
+<link rel="icon" href="favicon.png" type="image/png" />
+<link rel="shortcut icon" href="favicon.png" />
 <style>
 body {
   background-image: url('closed.jpg');
